Additional updates for testing MVP 12/12 release

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
 	<link rel="dns-prefetch" href="//youtube.com">
 
-	<link type="text/css" rel="stylesheet" href="Content/Styles/main.css" />
+	<link type="text/css" rel="stylesheet" href="Content/Styles/main.css?v=1.41" />
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
 	
 	<script src="Content/Scripts/modernizr-3.3.1.js"></script>
@@ -68,7 +68,7 @@
 	<script src="Content/Scripts/angular.slick.js"></script>
 	<script src="//www.youtube.com/player_api"></script>
 	<script src="Content/Scripts/angular-youtube-embed.js"></script>
-	<script src="App/app.js"></script>
+	<script src="App/app.js?v=1.41"></script>
 
 	<script src="App/Directives/Global/navigation.js"></script>
 	<script src="App/Directives/Global/footer.js"></script>
