--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		</nav>
 	</header>
 
-	<div ui-view autoscroll="true"></div>
+	<div ui-view autoscroll="true" class="{{$wrapperClass}}"></div>
 
 	<twwm-footer></twwm-footer>
 
@@ -61,7 +61,7 @@
 	<script src="Content/Scripts/angular.js"></script>
 	<script src="Content/Scripts/angular-ui-router.js"></script>
 	<script src="Content/Scripts/angular-animate.js"></script>
-	<script src="Content/Scripts/angular-cookies.js"></script>
+	<!--<script src="Content/Scripts/angular-cookies.js"></script>-->
 	<script src="Content/Scripts/moment.js"></script>
 	<script src="Content/Scripts/angular-moment.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.js"></script>
@@ -71,19 +71,22 @@
 	<script src="App/app.js?v=1.41"></script>
 
 	<script src="App/Directives/Global/navigation.js"></script>
-	<script src="App/Directives/Global/footer.js"></script>
+	<!--<script src="App/Directives/Global/footer.js"></script>-->
 	<script src="App/Directives/Global/search.js"></script>
+	<script src="App/Directives/Global/dateTime.js"></script>
+	<script src="App/Directives/Global/featuredPosts.js"></script>
 	<script src="App/Directives/Dashboard/navigation.js"></script>
-	<script src="App/Directives/Dashboard/leaderBoard.js"></script>
+	<!--<script src="App/Directives/Dashboard/leaderBoard.js"></script>-->
 	<script src="App/Directives/Home/homePanelOne.js"></script>
 	<script src="App/Directives/Home/homePanelTwo.js"></script>
 	<script src="App/Directives/Home/homePanelThree.js"></script>
 	<script src="App/Directives/Home/homePanelFour.js"></script>
 
-	<script src="App/Services/auth.fct.js"></script>
+	<!--<script src="App/Services/auth.fct.js"></script>
 	<script src="App/Services/user.fct.js"></script>
-	<script src="App/Services/flash.fct.js"></script>
+	<script src="App/Services/flash.fct.js"></script>-->
 	<script src="App/Services/page.fct.js"></script>
+	<script src="App/Services/blog.fct.js"></script>
 
 	<!--<script src="App/Controllers/Account/account.ctrl.js"></script>
 	<script src="App/Controllers/Account/login.ctrl.js"></script>-->
@@ -95,7 +98,18 @@
 
 	<script src="App/Controllers/Blog/blog.ctrl.js"></script>
 	<script src="App/Controllers/Account/register.ctrl.js"></script>
-	<script src="App/Controllers/Dashboard/dashboard.ctrl.js"></script>
+	<!--<script src="App/Controllers/Dashboard/dashboard.ctrl.js"></script>-->
+
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-88798830-1', 'auto');
+  ga('send', 'pageview');
+
+	</script>
 	
 </body>
 </html>
