fixes to search process

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 	<script src="App/Services/page.fct.js"></script>
 	<script src="App/Services/blog.fct.js"></script>
 	<script src="App/Services/featured.fct.js"></script>
+	<script src="App/Services/search.fct.js"></script>
 
 	<script src="App/Controllers/Events/events.ctrl.js"></script>
 	<script src="App/Controllers/Home/home.ctrl.js"></script>
